ics-service/overlays/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ics-service-ingress
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
    - host: ics-service-stg.apps.infnp-osc.incora.com
      http:
        paths:
          - path: /chemicals/api
            pathType: Prefix
            backend:
              service:
                name: ics-service
                port:
                  number: 9090
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: ics-service
                port:
                  number: 9091
